<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.dashboard.DashboardActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/timer_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/initial_time"
            android:drawableStart="@drawable/ic_baseline_timer_24"
            android:drawableLeft="@drawable/ic_baseline_timer_24"
            android:textSize="30sp"
            app:drawableStartCompat="@drawable/ic_baseline_timer_24"
            tools:ignore="UseCompatTextViewDrawableXml" />

        <TextView
            android:id="@+id/date_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="30, Jul 2021" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/start_to_dumping_point"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_background"
                android:padding="20dp"
                android:text="@string/start_to_dumping_point"
                android:textAllCaps="false"
                android:textColor="@color/light"
                android:textSize="14sp" />

            <Button
                android:id="@+id/arrive_to_dumping_point"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_background"
                android:padding="20dp"
                android:text="@string/arrive_to_dumping_point"
                android:textAllCaps="false"
                android:textColor="@color/light"
                android:textSize="14sp" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/start_to_loading_point"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_background"
                android:padding="20dp"
                android:text="@string/start_to_loading_point"
                android:textAllCaps="false"
                android:textColor="@color/light"
                android:textSize="14sp" />

            <Button
                android:id="@+id/arrive_to_loading_point"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_background"
                android:padding="20dp"
                android:text="@string/arrive_to_loanding_point"
                android:textAllCaps="false"
                android:textColor="@color/light"
                android:textSize="14sp" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/rain_btn"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_background_menu"
                android:padding="10dp"
                android:text="Hujan"
                android:textAllCaps="false"
                android:textColor="@color/light"
                android:textSize="14sp" />

            <Button
                android:id="@+id/slippery_btn"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_background_menu"
                android:padding="10dp"
                android:text="Slippery"
                android:textAllCaps="false"
                android:textColor="@color/light"
                android:textSize="14sp" />

            <Button
                android:id="@+id/rest_btn"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_background_menu"
                android:padding="10dp"
                android:text="Istirahat"
                android:textAllCaps="false"
                android:textColor="@color/light"
                android:textSize="14sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/eat_btn"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_background_menu"
                android:padding="10dp"
                android:text="Makan"
                android:textAllCaps="false"
                android:textColor="@color/light"
                android:textSize="14sp" />

            <Button
                android:id="@+id/pray_btn"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_background_menu"
                android:padding="10dp"
                android:text="Sholat"
                android:textAllCaps="false"
                android:textColor="@color/light"
                android:textSize="14sp" />

            <Button
                android:id="@+id/no_operator_btn"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_background_menu"
                android:padding="10dp"
                android:text="Tidak ada OP"
                android:textAllCaps="false"
                android:textColor="@color/light"
                android:textSize="14sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/breakdown_btn"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_background_menu_break_down"
                android:padding="10dp"
                android:text="Break Down"
                android:textAllCaps="false"
                android:textColor="@color/light"
                android:textSize="14sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/load_ob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Jumlah Load OB :" />

            <TextView
                android:id="@+id/load_limonit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Jumlah Load Limonit :" />

            <TextView
                android:id="@+id/load_saprolit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Jumlah Load Saprolid :" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>